# dataset-movies

./: .gitattributes  README.md  model.ipynb  planejamento.docx  preprocess.ipynb  pyproject.toml  treino.ipynb
dataset_movies/: __init__.py  analises.ipynb  geracao.ipynb  model.ipynb  treino.ipynb
geracao_candidatos/: .part-00000-25b1c388-bd95-4a18-a36c-866404c937c6-c000.snappy.parquet.crc  .part-00001-25b1c388-bd95-4a18-a36c-866404c937c6-c000.snappy.parquet.crc  .part-00002-25b1c388-bd95-4a18-a36c-866404c937c6-c000.snappy.parquet.crc  .part-00003-25b1c388-bd95-4a18-a36c-866404c937c6-c000.snappy.parquet.crc  .part-00004-25b1c388-bd95-4a18-a36c-866404c937c6-c000.snappy.parquet.crc  part-00000-25b1c388-bd95-4a18-a36c-866404c937c6-c000.snappy.parquet  part-00001-25b1c388-bd95-4a18-a36c-866404c937c6-c000.snappy.parquet  part-00002-25b1c388-bd95-4a18-a36c-866404c937c6-c000.snappy.parquet  part-00003-25b1c388-bd95-4a18-a36c-866404c937c6-c000.snappy.parquet  part-00004-25b1c388-bd95-4a18-a36c-866404c937c6-c000.snappy.parquet
input/: ratings.csv.REMOVED.git-id  stopwords.txt
mestrado/: NaivePCA.ipynb  RandomForest.ipynb  Untitled3.ipynb  com-pca.ipynb  preprocess.ipynb
mestrado-legado/: NaivePCA.ipynb  RandomForest.ipynb  SelecaoChiQuadraado.ipynb  bayes-selecao-caracteristicas.ipynb  com-pca.ipynb  preprocess.ipynb  sem-pca.ipynb  treino-validacao-teste.ipynb
offline_models/: Bayes.py  FeatureSelection.py  Graphics.py  Mlp.py  RandomForest.py  Svm.py  model_analysis.ipynb  preprocess.ipynb  teste.ipynb
(+35 files in other folders)
