[tool.poetry]
name = "dataset_movies"
version = "0.2.1"
description = ""
authors = ["Otavio Rosa <otavio.nunes021@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^2.0.0"
pyspark = "^3.5.1"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.1"
pyarrow = "^16.1.0"
fastparquet = "^2024.5.0"
imblearn = "^0.0"
statsmodels = "^0.14.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
tabulate = "^0.9.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
